add JavaScript Turtle Graphics environment

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <link rel="shortcut icon" href="https://editor.p5js.org/favicon.ico" type="image/x-icon">
-<title>p5.js-widget</title>
+<title>p5.js Widget Editor</title>
 <div id="app-holder"></div>
 <script src="main.bundle.js"></script>
+<script src="divider.js"></script>
