updating the library name

--- a/map/index.html
+++ b/map/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
     </main>
-    <script src="./Turtle.js"></script>
+    <script src="./TurtleGL.js"></script>
     <script src="./map.js"></script>
   </body>
 </html>
